--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <title>Helllo Word</title>
 </head>
 <body>
-    
+    <header>
+        <h1>hello World</h1>
+        <p>Que bom te ver por aqui, Fulano</p>
+
+    </header>
+
+<section>
+    <h2>HTML</h2>
+    <P>Hypertext Markup language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</P>
+
+    <h2>CSS</h2>
+    <P>Cascading Style (em português, Folha de Estilo em Cascata) estiliza a sua página web</P>
+
+
+</section>
+
+<footer>
+    <p>Uma página desenvolvida por Alura Start</p>
+
+
+
+</footer>
+
 </body>
 </html>
